# causpera

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  gap_analysis.md  research_limitations.md
examples/: train_toy.py
src/causpera/: __init__.py  attention.py  config.py  data.py  losses.py  metrics.py  model.py  plasticity.py
tests/: test_attention.py  test_data.py  test_loss.py  test_model.py  test_plasticity.py
