[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causpera"
version = "0.1.0"
description = "Experimental PyTorch toolkit for causal-sensitive sparse learning, adaptive consolidation, and uncertainty-gated computation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Heri Setia Wardoyo" }
]
keywords = [
  "causal-sensitive-learning",
  "sparse-attention",
  "continual-learning",
  "adaptive-computation",
  "uncertainty-routing",
  "pytorch",
  "research"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.1",
  "numpy>=1.24",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/herisetiawardoyo/causpera"
Issues = "https://github.com/herisetiawardoyo/causpera/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true